src/assets/css/limit-order.scss
@import "./modals.scss";
@import "~react-tippy/dist/tippy.css";

%btn {
  width: 151px;
  height: 40px;
  border-radius: 22.5px;
  padding: 0 25px;
  font-size: 14px;
  font-weight: 600;
  cursor: pointer;
}

.btn-cancel {
  @extend %btn;
  color: #222222;
  background-color: #f5f6f8;
}

.btn-confirm {
  @extend %btn;
  color: #ffffff;
  background-color: #ef8102;
  &:hover {
    background-color: $color-swap-light;
  }
}

.btn--disabled {
  pointer-events: none;
  opacity: 0.6;
}

%react-table-layout {
  position: relative;

  .ReactTable {
    height: 345px;
    min-height: 100px;
    margin: 15px 30px 15px 30px;
    border: none;

    &--empty {
      height: 260px !important;

      .rt-thead {
        //background-color: transparent !important;
      }
    }

    .rt-thead {
      overflow-y: auto;
      font-size: 12px;
      font-weight: 600;
      box-shadow: none;
      height: 44px;
      margin-bottom: 5px;
      position: sticky;
      top: 0;
      z-index: 999;

      .rt-th {
        font-weight: 500;
        border: none;
        outline: none;
        display: flex;
        align-items: center;
        justify-content: center;
        padding: 5px 0;
        overflow: visible;
        line-height: 35px;

        > div {
          padding-left: 10px;
        }

        &.-sort-asc, .-sort-asc {
          box-shadow: none;
        }

        &.-sort-desc, .-sort-desc {
          box-shadow: none;
        }
      }
    }

    .rt-tbody {
      font-size: 12px;
      font-weight: 400;
      overflow-x: hidden;
      $row-height: 50px;

      .rt-td {
        border: none;
        display: flex;
        justify-content: center;
        align-items: center;
        overflow: visible;
      }

      .rt-tr-group {
        border: none;
        overflow: visible;
        flex: none;
        cursor: pointer;

        &:hover{
          background: rgba(225, 228, 235, 0.3);
        }
      }
    }

    .pagination-bottom {
      margin: 10px;;
    }

    .rt-noData {
      background: transparent !important;
      font-size: 14px;
      font-weight: 500;
      top: 80%;
      padding: 0;
    }

    .empty-order__message {
      position: absolute;
      top: 70px;
      // padding: 10px 0 0;
      text-align: center;
      width: 100%;
      font-size: 14px;
      font-weight: 500;

      .place-order-trigger {
        text-decoration: underline;
        cursor: pointer;
      }
    }
  }


  @mixin cell-flex ($position) {
    &-header {
      justify-content: $position !important;
      span {
        padding-right: 5px;
      }
    }
    justify-content: $position !important;
  }

  .cell-flex-start {
    @include cell-flex(flex-start);
  }

  .cell-flex-end {
    @include cell-flex(flex-end);
  }

  .cell-flex-center {
    @include cell-flex(center);
  }

  .cell-date {
    &-header {
      justify-content: start!important;
      cursor: pointer;
    }
  }

  .cell-condition {
    &-header {
      cursor: pointer;

      .dropdown__trigger {
        color: #999999;
      }
    }
  }

  .cell-status {
    &-header {
      cursor: pointer;

      .dropdown__trigger {
        color: #999999;
      }
    }

    padding: 2px 8px;
    border-radius: 3px;
    font-size: 10px;
    font-weight: 500;
    margin: 0 auto;
    text-align: center;

    &--open {
      color: $text-green;
    }

    &--cancelled {
      color: #bf2600;
    }

    &--invalidated {
      color: #bf2600;
    }

    &--in_progress {
      color: $text-blue
    }

    &--filled {
      color: #006644;
    }

    &__container {
      position: relative;

      .status-info-icon {
        top: 0;
        position: absolute;
        right: -18px;

        &__mobile {
          right: 0 !important;
        }
      }
    }

    &__mobile {
      margin-right: 20px;
    }
  }

  .order-status-info {
    border-radius: 3px;
    background-color: #172b4c !important;
    font-size: 10px !important;
    font-weight: 500 !important;
    color: #ffffff !important;
  }

  .cell-action {
    .btn-cancel-order {
      height: 20px;
      width: 70px;
      font-size: 11px;
      font-weight: 300;
      border-radius: 18px;
      border: solid 1px;
      cursor: pointer;
      outline: none;
      transition: all .3s;

      @include screen-max-width(medium) {
        height: 25px;
        width: 90px;
      }
    }
  }

  .line-indicator {
    width: 10px;
    height: 1px;
    border: solid 1px #979797;
  }

  .cell-from, .cell-to {
    span {
      display: inline-block;
      vertical-align: middle;
    }
    position: relative;
  }

  .cell-text-small {
    font-size: 12px;
  }

  %number-cell {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
  }

  .from-number-cell {
    @extend %number-cell;
    max-width: 100px;

    // @include screen-max-width(medium) {
    //     max-width: 100px;
    // }
  }

  .to-number-cell {
    @extend %number-cell;
    max-width: 100px;

    &--extra-wrapper {
      position: relative;
      display: inline-block;
    }

    &--extra {
      padding: 5px 10px !important;
      border-radius: 8px;
      background-color: #999999;
      font-size: 9px;
      font-weight: 500;
      color: #ffffff;
      padding: 0 2px;
      cursor: pointer;
    }
  }
}

%checkmark-radio {
  position: absolute;
  top: 50%;
  left: 0;
  width: 12px;
  height: 12px;
  border: solid 1px #d1d8dd;
  border-radius: 50%;
  background-color: #ffffff;
  transform: translateY(-50%);
  transition: all .3s;

  &::after {
    content: '';
    display: block;
    width: 4px;
    height: 4px;
    border-radius: 50%;
    background-color: #ffffff;
    position: absolute;
    right: 0;
    left: 0;
    margin: 0 auto;
    top: 50%;
    transform: translateY(-50%) scale(0);
    transition: all .5s;
  }
}

%checkmark-radio--checked {
  border: solid 4px #ff9008;

  &::after {
    transform: translateY(-50%) scale(1);
  }
}
/* ... */

